manifests/seraphim/prod/gitlab/HTTPRoute-gitlab-gitlab.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations: {}
  labels:
    app: webservice
    chart: webservice-9.8.2
    heritage: Helm
    release: gitlab
  name: gitlab-gitlab
  namespace: gitlab
spec:
  hostnames:
    - gitlab.example.com
  parentRefs:
    - name: gitlab-gw
      sectionName: gitlab-web
  rules:
    - backendRefs:
        - kind: Service
          name: gitlab-webservice-default
          port: 8181
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
